--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -110,6 +110,9 @@
 	\cvitem{RRI Bengaluru}{Member of weekly Journal club, \textbf{Very Sirius Meeting (VSM)} at Astronomy and Astrophysics Department, Raman Research Institute.}
 	\cvitem{IISER Pune}{Organizer of \textbf{Astrophysics, Cosmology, and Particle Physics Journal Club} at IISER-Pune (September 2019 - March 2020).}
 	
+	\section{Outreach}
+	\cvitem{NCSC}{I had the honor of being invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru, where I had the opportunity to assess the innovative science projects of our brilliant young minds and discuss my research with them.}
+	\cvitem{RRI Outreach}{I have given a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}
 	\section{Languages}
 	\cvitem{Bengali}{Mother tongue}
 	\cvitem{English}{Fluent}
