--- a/docs/SayanSaha_CV_short.tex
+++ b/docs/SayanSaha_CV_short.tex
@@ -30,19 +30,21 @@
 \begin{document}
 	\makecvtitle
 	% Set link color to blue
+	\vspace{-20pt}
 	\section{Personal Information}
 	\cvitem{Date of Birth}{9th August 1996}
 	\cvitem{Nationality}{Indian}
+	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
 	%\cventry{since Aug 2019}{PhD in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{Aug 2019 - Feb 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
 	\cventry{2017--2019}{M.Sc. in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{2014--2017}{B.Sc. in Physics}{Ramakrishna Mission Residential College, Narendrapur (Calcutta University), India}{}{}{}
-
+	
 	\section{Visiting Positions}
 	\cventry{April 2022 - Present}{Visiting Researcher}{Astronomy and Astrophysics, Raman Research Institute, Bengaluru, India}{Academic Host - \textbf{Prof. Tarun Souradeep}}{}{}
-	\cventry{Sep 2022 - Aug 2023}{Swiss Government Excellence Fellow}{Département de Physique Théorique, Université de Genève, Switzerland}{Acdemic Host - \textbf{Prof. Julien Carron}}{}{}
-
+	\cventry{Sep 2022 - Aug 2023}{Swiss Government Excellence Fellow}{Département de Physique Théorique, Université de Genève, Switzerland}{Academic Host - \textbf{Prof. Julien Carron}}{}{}
+	
 	
 	
 	
@@ -57,19 +59,10 @@
 	\cvitem{2017}{Certificate of merit as \textbf{State Topper} for being placed among the top 1\% of 774 candidates in \textbf{National Graduate Physics Examination 2017} conducted by \textbf{Indian Association of Physics Teachers (IAPT)}.}
 	\cvitem{2014--2017}{Recipient of DST-Inspire Scholarship for College \& University students by MHRD, Govt. of India.}
 	
-	\section{Publications}
-	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}.}
-	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}
-	
-	\section{Research Experience}
-	\cvitem{PhD Proj. 1}{Studied \textbf{weak gravitational lensing of the CMB by galaxy clusters} in small angular scales. Developing simulations of a CMB flat sky patch lensed by galaxy clusters. Have built a sophisticated \textbf{Maximum-a-Posteriori (MAP)} estimator to estimate cluster mass for CMB S4-like experiments. I am building upon the clusterlens part of python module \chref{https://github.com/carronj/LensIt}{LensIt} by Julien Carron.}
-	\cvitem{PhD Proj. 2}{Studied signatures of \textbf{statistical isotropy violation of the CMB due to the motion of our observation frame}. In a Bayesian approach, we have estimated the velocity of our local motion with a high significance using \textbf{Hamiltonian Monte-Carlo (HMC)} technique.}
-	\cvitem{M.Sc.}{Worked on data analysis of high-energy cosmic ray air-shower data using Machine Learning (ML) and Deep Learning (DL) techniques. Developed a Monte-Carlo pipeline to simulate air-showers for different primaries.}
-	
 	\section{Experiments \& Collaborations}
 	%\cvitem{CMB-S4}{Working on the forecast of galaxy cluster mass detection and its significance}
 	%\cvitem{Planck}{Studying the violation signatures of isotropy of foreground cleaned CMB maps}
-	\cvitem{Cosmoglobe}{Working on implementing Hamtonian Monte-Carlo (HMC) in Commander3 and part of the OpenHFI group}
+	\cvitem{Cosmoglobe}{Implementing Hamtonian Monte-Carlo (HMC) in Commander3 and part of the OpenHFI group}
 	\cvitem{CMB-Bharat}{Web Coordinator (for the proposed CMB telescope from India)}
 	\cvitem{CMB S4}{Provisional member under the supervision of Prof. Julien Carron}
 	
@@ -79,50 +72,33 @@
 	\cvitem{April 2023}{{Future Cosmology}, Institut d'Etudes Scientifiques de Cargèse (IESC), France. Talk - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing}.}
 	\cvitem{April 2023}{{Future Science with CMB x LSS}, Yukawa Institute for Theoretical Physics, Kyoto University, Kyoto, Japan. Talk \& \chref{https://drive.google.com/file/d/14ens-R3l97_zpPZaKU_KLHm7703HZpW6/view?usp=drive_link}{Poster} - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing}.}
 	\cvitem{January 2023}{{Cosmoglobe Winter Workshop}, University of Oslo, Oslo, Norway. Talk - \textbf{Inferring our local motion from Small-scale CMB}.}
-	
-	\section{Schools}
-	\cvitem{January 2022}{\textbf{Physics of the Early Universe}, International Centre for Theoretical Sciences (ICTS), Bengaluru, India.}
-	\cvitem{August 2021}{\textbf{School-cum-Workshop on Data Analysis in Cosmology and Astroparticle Physics}, Technology Innovation Hub (TIH), Indian Statistical Institute, Kolkata, India. - 	\chref{https://drive.google.com/file/d/13a-zahTXIJRoKM-4254Qbd1xFDsErB0n/view?usp=sharing}{Course Certificate}}
-	\cvitem{June 2021}{\textbf{Summer School in Statistics for Astronomers}, Penn State University. - \chref{https://drive.google.com/file/d/1NmV673qvTVJfClCFXjnd62iDvlJKIYD3/view?usp=sharing}{Course Certificate}}
-	\cvitem{March, 2019}{\textbf{Pune-Mumbai Collider Meet},	Indian Institute of Science Education and Research (IISER), Pune-411008, India}
-	
 	\section{Computation Skills}
-	\cvitem{OS}{Windows, Linux, macOS}
 	\cvitem{Languages}{Python, Fortran 90, Shell script}
 	\cvitem{Tools}{Git, LaTeX, HTML, HPC computing, MS Office}
-	\cvitem{Codes}{LensIt, plancklens, CAMB, HEALPix (healpy).}
+	\cvitem{Codes}{\chref{https://github.com/carronj/LensIt}{LensIt} , \chref{https://github.com/carronj/plancklens}{plancklens}, CAMB, HEALPix (healpy).}
 	\cvitem{Sampling}{MCMC Sampling (Metropolis–Hastings, HMC).}
 	\cvitem{ML/DL Libs}{scikit-learn, tensorflow.}
 	
-	
-	\section{Relevant ML \& DL Courses}
-	\cvitem{1}{\textbf{Neural Networks and Deep Learning}, DeepLearning.AI - 	\chref{https://www.coursera.org/account/accomplishments/certificate/K5XUVVRHYG2P}{Course Certificate}}
-	\cvitem{2}{\textbf{Structuring Machine Learning Projects}, DeepLearning.AI - \chref{https://www.coursera.org/account/accomplishments/certificate/Y99M78RNM88M}{Course Certificate}}
-	\cvitem{3}{\textbf{Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization}, DeepLearning.AI - \chref{https://www.coursera.org/account/accomplishments/certificate/Z4BPNRQUR5V8}{Course Certificate}}
-	
-	
-	\section{Teaching Experience}
+\section{Relevant ML \& DL Courses}
+\cvitem{1}{\textbf{Neural Networks and Deep Learning}, DeepLearning.AI - 	\chref{https://www.coursera.org/account/accomplishments/certificate/K5XUVVRHYG2P}{Course Certificate}}
+\cvitem{2}{\textbf{Structuring Machine Learning Projects}, DeepLearning.AI - \chref{https://www.coursera.org/account/accomplishments/certificate/Y99M78RNM88M}{Course Certificate}}
+\cvitem{3}{\textbf{Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization}, DeepLearning.AI - \chref{https://www.coursera.org/account/accomplishments/certificate/Z4BPNRQUR5V8}{Course Certificate}}
+
+	\section{Teaching \& Outreach Experience }
 	\cvitem{Aug 2019 - Dec 2019}{Teaching Assistant for the course \textbf{“Electricity $\&$ Magnetism, PHY201”} for 2nd year BS-MS students at IISER, Pune under Dr. Aparna Deshpande and Dr. Diptimoy Ghosh.}
 	\cvitem{Jan 2020 - April 2020}{Teaching Assistant for the course \textbf{“Nuclear $\&$ Particle Physics, PHY422”} for 4th year BS-MS students at IISER, Pune under Prof. Sunil Mukhi.}
 	\cvitem{Sep 2020 - Jan 2021}{Teaching Assistant for the course \textbf{“Group Theory in Physics PHY356”} for 4th year BS-MS students at IISER, Pune under Prof. Sudarshan Ananth.}
-	
+	\cvitem{Sep 2023}{Was invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru.}
+	\cvitem{Sep 2023}{Gave a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}	
 	\section{Journal Clubs}
 	\cvitem{Unige}{Member of weekly \textbf{Cosmology Journal Club} at Département de Physique Théorique, Université de Genève.}
 	\cvitem{RRI Bengaluru}{Member of weekly Journal club, \textbf{Very Sirius Meeting (VSM)} at Astronomy and Astrophysics Department, Raman Research Institute.}
 	\cvitem{IISER Pune}{Organizer of \textbf{Astrophysics, Cosmology, and Particle Physics Journal Club} at IISER-Pune (September 2019 - March 2020).}
 	
-	\section{Outreach}
-	\cvitem{NCSC}{I had the honor of being invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru, where I had the opportunity to assess the innovative science projects of our brilliant young minds and discuss my research with them.}
-	\cvitem{RRI Outreach}{I have given a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}
-	\section{Languages}
-	\cvitem{Bengali}{Mother tongue}
-	\cvitem{English}{Fluent}
-	\cvitem{Hindi}{Fluent}
-	
 	\section{Referees}
-	\cvitem{PhD Supervisor}{Prof Tarun Souradeep, Raman Research Institute, Bengaluru, India,
+	\cvitem{Supervisor}{Prof Tarun Souradeep, Raman Research Institute, Bengaluru, India,
 		Email: \chref{mailto:tarun@rri.res.in}{tarun@rri.res.in}}
-	\cvitem{ESKAS Supervisor}{Prof Julien Carron,  University of Geneva, Switzerland, Email: \chref{mailto:julien.carron@unige.ch}{julien.carron@unige.ch}}
+	\cvitem{Collaborator}{Prof Julien Carron,  University of Geneva, Switzerland, Email: \chref{mailto:julien.carron@unige.ch}{julien.carron@unige.ch}}
 	\cvitem{Collaborator}{Prof Benjamin D. Wandelt, Institut d'Astrophysique de Paris, France, Email: \chref{mailto:bwandelt@iap.fr}{bwandelt@iap.fr}}
 	%	\cvitem{Collaborator}{Prof Suvodip Mukherjee, Assistant Professor at the Tata Institute of Fundamental Research, Mumbai, India Email: \chref{mailto:suvodip@tifr.res.in}{suvodip@tifr.res.in}}
 \end{document}
