--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -30,37 +30,37 @@
 \begin{document}
 	\makecvtitle
 	% Set link color to blue
+	\vspace{-20pt}
 	\section{Personal Information}
 	\cvitem{Date of Birth}{9th August 1996}
 	\cvitem{Nationality}{Indian}
+	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
 	%\cventry{since Aug 2019}{PhD in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{Aug 2019 - Feb 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
 	\cventry{2017--2019}{M.Sc. in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{2014--2017}{B.Sc. in Physics}{Ramakrishna Mission Residential College, Narendrapur (Calcutta University), India}{}{}{}
-
+	
 	\section{Visiting Positions}
 	\cventry{April 2022 - Present}{Visiting Researcher}{Astronomy and Astrophysics, Raman Research Institute, Bengaluru, India}{Academic Host - \textbf{Prof. Tarun Souradeep}}{}{}
-	\cventry{Sep 2022 - Aug 2023}{Swiss Government Excellence Fellow}{Département de Physique Théorique, Université de Genève, Switzerland}{Acdemic Host - \textbf{Prof. Julien Carron}}{}{}
-
+	\cventry{Sep 2022 - Aug 2023}{Swiss Government Excellence Fellow}{Département de Physique Théorique, Université de Genève, Switzerland}{Academic Host - \textbf{Prof. Julien Carron}}{}{}
+	
 	
 	
 	
 	\section{Awards \& Scholarship}
-	\cvitem{March 2023}{Recipient of \textbf{Infosys Foundation Travel Award} (50,000 INR) to attend the \textbf{Future Cosmology} workshop at IESC Cargese, France. Designated as \textbf{Infosys Foundation Fellow} - \chref{https://drive.google.com/file/d/1jl_NXJIIea0j3z5OQ5PAubhJbrOV978r/view?usp=sharing}{Award letter}}
-	\cvitem{March 2023}{Recipient of grant (2000 CHF) from \textbf{Société académique de Genève (SACAD)} to attend the \textbf{Future Science with CMB x LSS} workshop at YITP, Kyoto University. - \chref{https://drive.google.com/file/d/1EdU1EU8389akmplmu70lQeGplcEjRNJd/view?usp=sharing}{Award letter}}
 	\cvitem{Sep 2022 - Aug 2023}{Recipient of \textbf{Swiss Government Excellence Scholarship (Research), ESKAS No. 2022.0316}, hosted by the University of Geneva. - \chref{https://drive.google.com/file/d/113ciUOCxh7YZXvZko2D375hefuGisvtP/view?usp=sharing}{Award Letter}}
+	\cvitem{March 2023}{Recipient of grant (2000 CHF) from \textbf{Société académique de Genève (SACAD)} to attend the \textbf{Future Science with CMB x LSS} workshop at YITP, Kyoto University. - \chref{https://drive.google.com/file/d/1EdU1EU8389akmplmu70lQeGplcEjRNJd/view?usp=sharing}{Award letter}}
+	\cvitem{March 2023}{Recipient of \textbf{Infosys Foundation Travel Award} (50,000 INR) to attend the \textbf{Future Cosmology} workshop at IESC Cargese, France. Designated as \textbf{Infosys Foundation Fellow} - \chref{https://drive.google.com/file/d/1jl_NXJIIea0j3z5OQ5PAubhJbrOV978r/view?usp=sharing}{Award letter}}
 	\cvitem{August 2019}{Recipient of Institute PhD fellowship from IISER-Pune, MHRD.}
 	\cvitem{2017 - 2019}{Recipient of Institute M.Sc. fellowship from IISER-Pune, MHRD.}
 	%\cvitem{2017}{Cleared Joint Entrance $\&$ Screening Test (JEST) for Integrated PhD with a rank of 248.}
 	%\cvitem{2017}{Cleared IIT JAM with a rank of 472.}
 	\cvitem{2017}{Certificate of merit as \textbf{State Topper} for being placed among the top 1\% of 774 candidates in \textbf{National Graduate Physics Examination 2017} conducted by \textbf{Indian Association of Physics Teachers (IAPT)}.}
 	\cvitem{2014--2017}{Recipient of DST-Inspire Scholarship for College \& University students by MHRD, Govt. of India.}
-	
 	\section{Publications}
 	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}.}
-	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}
-	
+	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}	
 	\section{Research Experience}
 	\cvitem{PhD Proj. 1}{Studied \textbf{weak gravitational lensing of the CMB by galaxy clusters} in small angular scales. Developing simulations of a CMB flat sky patch lensed by galaxy clusters. Have built a sophisticated \textbf{Maximum-a-Posteriori (MAP)} estimator to estimate cluster mass for CMB S4-like experiments. I am building upon the clusterlens part of python module \chref{https://github.com/carronj/LensIt}{LensIt} by Julien Carron.}
 	\cvitem{PhD Proj. 2}{Studied signatures of \textbf{statistical isotropy violation of the CMB due to the motion of our observation frame}. In a Bayesian approach, we have estimated the velocity of our local motion with a high significance using \textbf{Hamiltonian Monte-Carlo (HMC)} technique.}
@@ -69,7 +69,7 @@
 	\section{Experiments \& Collaborations}
 	%\cvitem{CMB-S4}{Working on the forecast of galaxy cluster mass detection and its significance}
 	%\cvitem{Planck}{Studying the violation signatures of isotropy of foreground cleaned CMB maps}
-	\cvitem{Cosmoglobe}{Working on implementing Hamtonian Monte-Carlo (HMC) in Commander3 and part of the OpenHFI group}
+	\cvitem{Cosmoglobe}{Implementing Hamtonian Monte-Carlo (HMC) in Commander3 and part of the OpenHFI group}
 	\cvitem{CMB-Bharat}{Web Coordinator (for the proposed CMB telescope from India)}
 	\cvitem{CMB S4}{Provisional member under the supervision of Prof. Julien Carron}
 	
@@ -87,13 +87,11 @@
 	\cvitem{March, 2019}{\textbf{Pune-Mumbai Collider Meet},	Indian Institute of Science Education and Research (IISER), Pune-411008, India}
 	
 	\section{Computation Skills}
-	\cvitem{OS}{Windows, Linux, macOS}
 	\cvitem{Languages}{Python, Fortran 90, Shell script}
 	\cvitem{Tools}{Git, LaTeX, HTML, HPC computing, MS Office}
-	\cvitem{Codes}{LensIt, plancklens, CAMB, HEALPix (healpy).}
-	\cvitem{Sampling}{MCMC Sampling (Metropolis–Hastings, HMC).}
-	\cvitem{ML/DL Libs}{scikit-learn, tensorflow.}
-	
+	\cvitem{Codes}{\chref{https://github.com/carronj/LensIt}{LensIt},  \chref{https://github.com/carronj/plancklens}{plancklens}, CAMB, HEALPix (healpy)}
+	\cvitem{Sampling}{MCMC Sampling (Metropolis–Hastings, HMC)}
+	\cvitem{ML/DL Libs}{scikit-learn, tensorflow}
 	
 	\section{Relevant ML \& DL Courses}
 	\cvitem{1}{\textbf{Neural Networks and Deep Learning}, DeepLearning.AI - 	\chref{https://www.coursera.org/account/accomplishments/certificate/K5XUVVRHYG2P}{Course Certificate}}
@@ -112,17 +110,13 @@
 	\cvitem{IISER Pune}{Organizer of \textbf{Astrophysics, Cosmology, and Particle Physics Journal Club} at IISER-Pune (September 2019 - March 2020).}
 	
 	\section{Outreach}
-	\cvitem{NCSC}{I had the honor of being invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru, where I had the opportunity to assess the innovative science projects of our brilliant young minds and discuss my research with them.}
-	\cvitem{RRI Outreach}{I have given a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}
-	\section{Languages}
-	\cvitem{Bengali}{Mother tongue}
-	\cvitem{English}{Fluent}
-	\cvitem{Hindi}{Fluent}
+	\cvitem{NCSC}{Was invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru.}
+	\cvitem{RRI Outreach}{Gave a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}	
 	
 	\section{Referees}
-	\cvitem{PhD Supervisor}{Prof Tarun Souradeep, Raman Research Institute, Bengaluru, India,
+	\cvitem{Supervisor}{Prof Tarun Souradeep, Raman Research Institute, Bengaluru, India,
 		Email: \chref{mailto:tarun@rri.res.in}{tarun@rri.res.in}}
-	\cvitem{ESKAS Supervisor}{Prof Julien Carron,  University of Geneva, Switzerland, Email: \chref{mailto:julien.carron@unige.ch}{julien.carron@unige.ch}}
+	\cvitem{Collaborator}{Prof Julien Carron,  University of Geneva, Switzerland, Email: \chref{mailto:julien.carron@unige.ch}{julien.carron@unige.ch}}
 	\cvitem{Collaborator}{Prof Benjamin D. Wandelt, Institut d'Astrophysique de Paris, France, Email: \chref{mailto:bwandelt@iap.fr}{bwandelt@iap.fr}}
 	%	\cvitem{Collaborator}{Prof Suvodip Mukherjee, Assistant Professor at the Tata Institute of Fundamental Research, Mumbai, India Email: \chref{mailto:suvodip@tifr.res.in}{suvodip@tifr.res.in}}
 \end{document}
