--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -32,7 +32,7 @@
 	% Set link color to blue
 	\vspace{-20pt}
 	\section{Personal Information}
-	\cvitem{Date of Birth}{9th August 1996}
+	%\cvitem{Date of Birth}{9th August 1996}
 	\cvitem{Nationality}{Indian}
 	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
@@ -59,7 +59,7 @@
 	\cvitem{2017}{Certificate of merit as \textbf{State Topper} for being placed among the top 1\% of 774 candidates in \textbf{National Graduate Physics Examination 2017} conducted by \textbf{Indian Association of Physics Teachers (IAPT)}.}
 	\cvitem{2014--2017}{Recipient of DST-Inspire Scholarship for College \& University students by MHRD, Govt. of India.}
 	\section{Publications}
-	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}.}
+	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}, accepted for publication in JCAP,}
 	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}	
 	\section{Research Experience}
 	\cvitem{PhD Proj. 1}{Studied \textbf{weak gravitational lensing of the CMB by galaxy clusters} in small angular scales. Developing simulations of a CMB flat sky patch lensed by galaxy clusters. Have built a sophisticated \textbf{Maximum-a-Posteriori (MAP)} estimator to estimate cluster mass for CMB S4-like experiments. I am building upon the clusterlens part of python module \chref{https://github.com/carronj/LensIt}{LensIt} by Julien Carron.}
