--- a/docs/SayanSaha_CV_short.tex
+++ b/docs/SayanSaha_CV_short.tex
@@ -2,7 +2,7 @@
 \moderncvstyle{classic}
 \moderncvcolor{blue}
 
-\usepackage[scale=0.85]{geometry}
+\usepackage[scale=0.89]{geometry}
 %Setup hyperref package, and colours for links
 
 % Personal data
@@ -32,7 +32,7 @@
 	% Set link color to blue
 	\vspace{-20pt}
 	\section{Personal Information}
-	\cvitem{Date of Birth}{9th August 1996}
+	%\cvitem{Date of Birth}{9th August 1996}
 	\cvitem{Nationality}{Indian}
 	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
@@ -49,16 +49,18 @@
 	
 	
 	\section{Awards \& Scholarship}
-	\cvitem{March 2023}{Recipient of \textbf{Infosys Foundation Travel Award} (50,000 INR) to attend the \textbf{Future Cosmology} workshop at IESC Cargese, France. Designated as \textbf{Infosys Foundation Fellow} - \chref{https://drive.google.com/file/d/1jl_NXJIIea0j3z5OQ5PAubhJbrOV978r/view?usp=sharing}{Award letter}}
-	\cvitem{March 2023}{Recipient of grant (2000 CHF) from \textbf{Société académique de Genève (SACAD)} to attend the \textbf{Future Science with CMB x LSS} workshop at YITP, Kyoto University. - \chref{https://drive.google.com/file/d/1EdU1EU8389akmplmu70lQeGplcEjRNJd/view?usp=sharing}{Award letter}}
 	\cvitem{Sep 2022 - Aug 2023}{Recipient of \textbf{Swiss Government Excellence Scholarship (Research), ESKAS No. 2022.0316}, hosted by the University of Geneva. - \chref{https://drive.google.com/file/d/113ciUOCxh7YZXvZko2D375hefuGisvtP/view?usp=sharing}{Award Letter}}
+	\cvitem{March 2023}{Recipient of grant (2000 CHF) from \textbf{Société académique de Genève (SACAD)} to attend the \textbf{Future Science with CMB x LSS} workshop at YITP, Kyoto University. - \chref{https://drive.google.com/file/d/1EdU1EU8389akmplmu70lQeGplcEjRNJd/view?usp=sharing}{Award letter}}
+	\cvitem{March 2023}{Recipient of \textbf{Infosys Foundation Travel Award} (50,000 INR) to attend the \textbf{Future Cosmology} workshop at IESC Cargese, France. Designated as \textbf{Infosys Foundation Fellow} - \chref{https://drive.google.com/file/d/1jl_NXJIIea0j3z5OQ5PAubhJbrOV978r/view?usp=sharing}{Award letter}}
 	\cvitem{August 2019}{Recipient of Institute PhD fellowship from IISER-Pune, MHRD.}
 	\cvitem{2017 - 2019}{Recipient of Institute M.Sc. fellowship from IISER-Pune, MHRD.}
 	%\cvitem{2017}{Cleared Joint Entrance $\&$ Screening Test (JEST) for Integrated PhD with a rank of 248.}
 	%\cvitem{2017}{Cleared IIT JAM with a rank of 472.}
 	\cvitem{2017}{Certificate of merit as \textbf{State Topper} for being placed among the top 1\% of 774 candidates in \textbf{National Graduate Physics Examination 2017} conducted by \textbf{Indian Association of Physics Teachers (IAPT)}.}
 	\cvitem{2014--2017}{Recipient of DST-Inspire Scholarship for College \& University students by MHRD, Govt. of India.}
-	
+		\section{Publications}
+	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}.}
+	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}	
 	\section{Experiments \& Collaborations}
 	%\cvitem{CMB-S4}{Working on the forecast of galaxy cluster mass detection and its significance}
 	%\cvitem{Planck}{Studying the violation signatures of isotropy of foreground cleaned CMB maps}
