--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -37,7 +37,7 @@
 	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
 	%\cventry{since Aug 2019}{PhD in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
-	\cventry{Aug 2019 - Feb 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
+	\cventry{Aug 2019 - March 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
 	\cventry{2017--2019}{M.Sc. in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{2014--2017}{B.Sc. in Physics}{Ramakrishna Mission Residential College, Narendrapur (Calcutta University), India}{}{}{}
 	
@@ -59,8 +59,8 @@
 	\cvitem{2017}{Certificate of merit as \textbf{State Topper} for being placed among the top 1\% of 774 candidates in \textbf{National Graduate Physics Examination 2017} conducted by \textbf{Indian Association of Physics Teachers (IAPT)}.}
 	\cvitem{2014--2017}{Recipient of DST-Inspire Scholarship for College \& University students by MHRD, Govt. of India.}
 	\section{Publications}
-	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]}, accepted for publication in JCAP,}
-	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}.}	
+	\cvitem{2023}{\textbf{Sayan Saha}, Louis Legrand, and Julien Carron, \textbf{Cluster profiles from beyond-the-QE CMB lensing mass maps}, \chref{https://doi.org/10.1088/1475-7516/2024/01/024}{JCAP 01 (2024) 024}, \chref{https://arxiv.org/abs/2307.11711}{arXiv:2307.11711 [astro-ph.CO]},}
+	\cvitem{2021}{\textbf{Sayan Saha}, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt, \textbf{Bayesian estimation of our local motion from the Planck-2018 CMB temperature map}, \chref{https://doi.org/10.1088/1475-7516/2021/10/072}{JCAP 10 (2021) 072}, \chref{https://arxiv.org/abs/2106.07666}{arXiv:2106.07666 [astro-ph.CO]}.}	
 	\section{Research Experience}
 	\cvitem{PhD Proj. 1}{Studied \textbf{weak gravitational lensing of the CMB by galaxy clusters} in small angular scales. Developing simulations of a CMB flat sky patch lensed by galaxy clusters. Have built a sophisticated \textbf{Maximum-a-Posteriori (MAP)} estimator to estimate cluster mass for CMB S4-like experiments. I am building upon the clusterlens part of python module \chref{https://github.com/carronj/LensIt}{LensIt} by Julien Carron.}
 	\cvitem{PhD Proj. 2}{Studied signatures of \textbf{statistical isotropy violation of the CMB due to the motion of our observation frame}. In a Bayesian approach, we have estimated the velocity of our local motion with a high significance using \textbf{Hamiltonian Monte-Carlo (HMC)} technique.}
@@ -92,7 +92,7 @@
 	\cvitem{Codes}{\chref{https://github.com/carronj/LensIt}{LensIt},  \chref{https://github.com/carronj/plancklens}{plancklens}, CAMB, HEALPix (healpy)}
 	\cvitem{Sampling}{MCMC Sampling (Metropolis–Hastings, HMC)}
 	\cvitem{ML/DL Libs}{scikit-learn, tensorflow}
-	
+	\pagebreak
 	\section{Relevant ML \& DL Courses}
 	\cvitem{1}{\textbf{Neural Networks and Deep Learning}, DeepLearning.AI - 	\chref{https://www.coursera.org/account/accomplishments/certificate/K5XUVVRHYG2P}{Course Certificate}}
 	\cvitem{2}{\textbf{Structuring Machine Learning Projects}, DeepLearning.AI - \chref{https://www.coursera.org/account/accomplishments/certificate/Y99M78RNM88M}{Course Certificate}}
@@ -103,7 +103,7 @@
 	\cvitem{Aug 2019 - Dec 2019}{Teaching Assistant for the course \textbf{“Electricity $\&$ Magnetism, PHY201”} for 2nd year BS-MS students at IISER, Pune under Dr. Aparna Deshpande and Dr. Diptimoy Ghosh.}
 	\cvitem{Jan 2020 - April 2020}{Teaching Assistant for the course \textbf{“Nuclear $\&$ Particle Physics, PHY422”} for 4th year BS-MS students at IISER, Pune under Prof. Sunil Mukhi.}
 	\cvitem{Sep 2020 - Jan 2021}{Teaching Assistant for the course \textbf{“Group Theory in Physics PHY356”} for 4th year BS-MS students at IISER, Pune under Prof. Sudarshan Ananth.}
-	
+	%	\pagebreak
 	\section{Journal Clubs}
 	\cvitem{Unige}{Member of weekly \textbf{Cosmology Journal Club} at Département de Physique Théorique, Université de Genève.}
 	\cvitem{RRI Bengaluru}{Member of weekly Journal club, \textbf{Very Sirius Meeting (VSM)} at Astronomy and Astrophysics Department, Raman Research Institute.}
