--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -37,7 +37,7 @@
 	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
 	\section{Education}
 	%\cventry{since Aug 2019}{PhD in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
-	\cventry{Aug 2019 - March 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
+	\cventry{Aug 2019 - April 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
 	\cventry{2017--2019}{M.Sc. in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{2014--2017}{B.Sc. in Physics}{Ramakrishna Mission Residential College, Narendrapur (Calcutta University), India}{}{}{}
 	
@@ -74,10 +74,11 @@
 	\cvitem{CMB S4}{Provisional member under the supervision of Prof. Julien Carron}
 	
 	\section{Contributed talks \& posters}
+	\cvitem{November 2023}{Neighbourhood Cosmology Meeting, Raman Research Institute (RRI), Bengaluru, India. \linebreak Talk - \textbf{Exploring Cutting-Edge Statistical Methods for Parameter Inference in Present and Future CMB Surveys} [\chref{https://www.youtube.com/watch?v=Eb7QTGZkXVo&t=10747s}{link}],}
 	\cvitem{May-June 2023}{{Third EuCAPT Annual Symposium}, CERN, Geneva, Switzerland. 
-		Talk - \textbf{Extracting Cluster Information from small-scale CMB}. [\chref{https://cds.cern.ch/record/2860688}{Link}]}
-	\cvitem{April 2023}{{Future Cosmology}, Institut d'Etudes Scientifiques de Cargèse (IESC), France. Talk - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing}.}
-	\cvitem{April 2023}{{Future Science with CMB x LSS}, Yukawa Institute for Theoretical Physics, Kyoto University, Kyoto, Japan. Talk \& \chref{https://drive.google.com/file/d/14ens-R3l97_zpPZaKU_KLHm7703HZpW6/view?usp=drive_link}{Poster} - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing}.}
+		Talk - \textbf{Extracting Cluster Information from small-scale CMB} [\chref{https://cds.cern.ch/record/2860688}{Link}],}
+	\cvitem{April 2023}{{Future Cosmology}, Institut d'Etudes Scientifiques de Cargèse (IESC), France. Talk - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing},}
+	\cvitem{April 2023}{{Future Science with CMB x LSS}, Yukawa Institute for Theoretical Physics, Kyoto University, Kyoto, Japan. Talk \& \chref{https://drive.google.com/file/d/14ens-R3l97_zpPZaKU_KLHm7703HZpW6/view?usp=drive_link}{Poster} - \textbf{Dark Matter Halos under the spotlight of CMB-Lensing},}
 	\cvitem{January 2023}{{Cosmoglobe Winter Workshop}, University of Oslo, Oslo, Norway. Talk - \textbf{Inferring our local motion from Small-scale CMB}.}
 	
 	\section{Schools}
@@ -111,7 +112,8 @@
 	
 	\section{Outreach}
 	\cvitem{NCSC}{Was invited as a judge for the \chref{http://www.ncsc.co.in/}{National Children's Science Congress} 2023 (Regional level) in Bengaluru.}
-	\cvitem{RRI Outreach}{Gave a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}	
+	\cvitem{RRI Outreach}{Gave a talk as a part of the \chref{https://www.rri.res.in/school-and-college-visits}{outreach program} for school children organised by Raman Research Institute (RRI), Talk - \textbf{The Universe in your pocket} [\chref{https://drive.google.com/file/d/1lU9mTkin-0qXb-TSVVXOYHxLPMRL-uzu/view?usp=drive_link}{slides}].}
+	\cvitem{IISF 2024}{Participated as a part the RRI representation team at the India International Science Festival (IISF) 2024, engaging with the general public to showcase RRI's work, received the "Best Conceptual Pavilion Award"}		
 	
 	\section{Referees}
 	\cvitem{Supervisor}{Prof Tarun Souradeep, Raman Research Institute, Bengaluru, India,
