--- a/docs/SayanSaha_CV.tex
+++ b/docs/SayanSaha_CV.tex
@@ -10,9 +10,9 @@
 \title{Curriculum Vitae}
 %\address{Department of Physics}{Indian Institute of Science Education and Research}{Pune 411008, India}
 %\address{Département de Physique Théorique,} {Université de Genève, 24 quai Ernest Ansermet,}{1211 Genève 4, Switzerland}{}
-\address{Astronomy and Astrophysics,} {Raman Research Institute, C. V. Raman Avenue,}{Bengaluru 560080, India}{}
-\phone[mobile]{(+91) 8927599624}
-\email{sayan.saha@students.iiserpune.ac.in}
+\address{College of Science,} {Northeastern University, 360 Huntington Ave,}{Boston, MA 02115, USA}{}
+%\phone[mobile]{(+91) 8927599624}
+\email{sa.saha@northeastern.edu}
 \homepage{s-sayan.github.io}
 %\social[linkedin]{sayan-saha-78400b139}
 \social[github]{s-sayan}
@@ -35,9 +35,11 @@
 	%\cvitem{Date of Birth}{9th August 1996}
 	\cvitem{Nationality}{Indian}
 	\cvitem{Languages}{Bengali (native), English (fluent), Hindi (fluent)}
+	\section{Current position}
+	\cventry{Oct 2024- Present}{Post-doctoral Research Associate}{Northeastern University, Boston, MA 02115, USA}{working with Prof. Jacqueline Mccleary on a NASA Balloon-borne Imaging Telescope , SuperBIT}{}{}
 	\section{Education}
 	%\cventry{since Aug 2019}{PhD in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
-	\cventry{Aug 2019 - Aug 2024 [\textbf{Expected}]}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
+	\cventry{Aug 2019 - Sep 2024}{PhD}{Department of Physics, Indian Institute of Science Education and Research (IISER), Pune, India}{Thesis - \textbf{Novel Bayesian Inferences from the Cosmic Microwave Background}}{Thesis Supervisor - \textbf{Prof. Tarun Souradeep}}{}
 	\cventry{2017--2019}{M.Sc. in Physics}{Department of Physics, IISER-Pune, India}{}{}{}
 	\cventry{2014--2017}{B.Sc. in Physics}{Ramakrishna Mission Residential College, Narendrapur (Calcutta University), India}{}{}{}
 	
